# polaris

./: .clang-format  .clang-tidy  .codespellrc  .editorconfig  .gitignore  CMakeLists.txt  build.bat
cmake/: generate_shaders.cmake
src/: main.cpp
src/camera/: camera.hpp
src/image/: FrameBuffer.cpp  FrameBuffer.hpp  PPM.cpp  PPM.hpp  Pixel.cpp  Pixel.hpp  RTWImage.hpp
src/math/: AABB.hpp  BVH.hpp  Common.hpp  Interval.hpp  Ray.hpp  Vec.hpp  common.hpp  hittable.hpp  interval.hpp  ray.hpp  sphere.hpp  vec.hpp
src/scene/: Camera.cpp  Camera.hpp  Hittable.hpp  camera.cpp  camera.hpp  hittable.hpp  hittable_list.hpp
src/scene/material/: Dielectric.hpp  Lambertian.hpp  Material.hpp  Metal.hpp
src/scene/objects/: Quad.cpp  Quad.hpp  Sphere.cpp  Sphere.hpp  sphere.hpp
src/scene/texture/: CheckerTexture.hpp  ImageTexture.hpp  PerlinNoise.hpp  SolidColour.hpp  Texture.hpp
src/vk/: CMakeLists.txt  Shaders.hpp  VulkanApp.cpp  VulkanApp.hpp
src/vk/shaders/: triangle.vert
